// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two - small 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
  className="S1"
>
  <div
    className="S1"
  >
    secondary-1
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    secondary-2
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    support-1
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    support-2
  </div>
</div>
`;

exports[`2. secondary two no pic and two - medium 1`] = `
Array [
  <style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
    className="S1"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginLeft": "10px",
        "marginRight": "10px",
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="S1"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="S1"
      >
        secondary-1
      </div>
    </div>
    <div
      className="S1"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      className="S1"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="S1"
      >
        secondary-2
      </div>
    </div>
  </div>,
  <style>
.S1 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />,
  <style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
    className="S1"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginLeft": "10px",
        "marginRight": "10px",
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="S1"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="S1"
      >
        support-1
      </div>
    </div>
    <div
      className="S1"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      className="S1"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="S1"
      >
        support-2
      </div>
    </div>
  </div>,
]
`;

exports[`3. secondary two no pic and two - wide 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S1"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="S1"
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div
      className="S1"
    >
      secondary-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S2"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
        "width": "16.6%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div
      className="S1"
    >
      secondary-2
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S2"
    style={
      Object {
        "paddingLeft": "5px",
        "paddingRight": "5px",
        "width": "16.6%",
      }
    }
  >
    <div
      className="S1"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`4. secondary two no pic and two - huge 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S1"
  style={
    Object {
      "WebkitAlignSelf": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexDirection": "row",
      "alignSelf": "center",
      "flexDirection": "row",
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexDirection": "row",
      "msFlexItemAlign": "center",
      "width": "86%",
    }
  }
>
  <div
    className="S1"
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div
      className="S1"
    >
      secondary-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S2"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
        "width": "16.6%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div
      className="S1"
    >
      secondary-2
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S2"
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
        "width": "16.6%",
      }
    }
  >
    <div
      className="S1"
    >
      support-2
    </div>
  </div>
</div>
`;
